[metadata]
name = rayter
url = https://github.com/peterjaric/rayter
project_urls = 
    Documentation = https://github.com/peterjaric/rayter
    Code = https://github.com/peterjaric/rayter
    Issue tracker = https://github.com/peterjaric/rayter/issues
description = Game rating command ine tool and python library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = game,rating,elo,python
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Games/Entertainment

[options]
packages = find:
include_package_data = true
zip_safe = false
python_requires = >= 3.6

[options.packages.find]
exclude =
    examples
    tests

[options.entry_points]
console_scripts =
    rayter = rayter.main:main